--- a/public/nav.css
+++ b/public/nav.css
@@ -2,7 +2,9 @@ nav {
 	background-color: #eee;
 	padding: 0;
 	margin:  0;
-	height:  2.4em;
+        position: fixed;
+        top: 0;
+        width: 100%;
 }
 #main-menu {
 }
