--- a/views/new-talent.jade
+++ b/views/new-talent.jade
@@ -21,7 +21,7 @@ html
 			}
 	body
 		h1 Neues Talent:
-		form(action="/talent/neu", method="post", accept-charset="utf-8")
+		form(action="/neu", method="post", accept-charset="utf-8")
 			div
 				label(for="t_name") Name
 				input#t_name(type="text", name="name", placeholder="Talent-Name", required)
