Getting the basic features working with the new DB design.

--- a/views/edit-held/ap.jade
+++ b/views/edit-held/ap.jade
@@ -10,7 +10,7 @@ html(lang="de")
 			form(action="/ap/"+_id, method="post", accept-charset="utf-8")
 				input(type="hidden", name="_method", value="put")
 				table.data-section.mitte.eigenschaften
-					caption= held.Person.Name
+					caption= Person.Name
 					colgroup
 						col(style="width: 15%")
 						col(style="width: 35%")
