--- a/views/edit-held/procon.jade
+++ b/views/edit-held/procon.jade
@@ -1,16 +1,16 @@
-- var counter = { count: 0, next: function() { return ++counter.count; } };
+- var counter = { count: 0, next: function() { counter.count += 1; return counter.count; } };
 
 mixin plainProCon(pro, x)
-	- var idx = counter.next()
+	- var id = counter.next()
 	li
-		input(name=["Vorteile", "Nachteile"][x], type="checkbox", value=pro, id="pc_"+idx)
-		label(for="pc_"+idx)= pro
+		input(name=["Vorteile", "Nachteile"][x], type="checkbox", value=pro, id="pc_"+id)
+		label(for="pc_"+id)= pro
 
 mixin stagedProCon(pro, x, opt)
-	- var idx = counter.next()
+	- var id = counter.next()
 	li
-		input.stufe(name=["Vorteile", "Nachteile"][x], type="checkbox", value=pro, id="pc_"+idx)
-		label(for="pc_"+idx)= pro
+		input.stufe(name=["Vorteile", "Nachteile"][x], type="checkbox", value=pro, id="pc_"+id)
+		label(for="pc_"+id)= pro
 		input(type="number", min=opt.min||1, max=opt.max, step=opt.step||1)
 
 !!! 5
@@ -23,199 +23,26 @@ html(lang="de")
 	body
 		h1.mitte Neuen Charakter erstellen
 		
-		form(action="/neu", method="post", accept-charset="utf-8")#newChar
-		
-			fieldset
-				legend Beschreibung
-				ul.floatLabel
-					li
-						label(for="char_name") Name:
-						input(name="Person[Name]", id="char_name" type="text", placeholder="Name").halfSize
-					li
-						label(for="char_gender") Geschlecht:
-						select(name="Person[Geschlecht]", id="char_gender")
-							option(selected) männlich
-							option weiblich
-					li
-						label(for="char_so") Sozialstatus:
-						input(name="Person[SO]", id="char_so", type="number", min="0", max="20", step="1", value="5", placeholder="Sozialstatus")
-					li
-						label(for="char_height") Größe:
-						input(name="Person[Größe]", id="char_height", type="number", min="25", max="250", step="1", value="175") 
-						| &nbsp; Halbfinger
-					li
-						label(for="char_weight") Gewicht:
-						input(name="Person[Gewicht]", id="char_weight", type="number", min="20", max="300", step="1", value="75") 
-						| &nbsp; Stein
-					li
-						label(for="char_alter") Alter:
-						input(name="Person[Alter]", id="char_alter", type="number", min="10", step="1", value="17")
-					li
-						label Tsatag:
-						select(name="Person[Tsatag][tag]", size="1")
-							- for (var day = 1; day < 31; day++)
-								option(value=day)= day
-						select(name="Person[Tsatag][monat]", size="1")
-							each month, index in ["PRA", "RON", "EFF", "TRA", "BOR", "HES", "FIR", "TSA", "PHE", "PER", "ING", "RAH", "(NLT)"]
-								option(value=index)= month
-						input(name="Person[Tsatag][jahr]", type="number", step="1", value="1010")
-						| &nbsp; BF
-					li
-						label(for="char_hair") Haarfarbe:
-						input(name="Person[Haarfarbe]", id="char_hair" type="text", placeholder="Haarfarbe")
-					li
-						label(for="char_eyes") Augenfarbe:
-						input(name="Person[Augenfarbe]", id="char_eyes" type="text", placeholder="Augenfarbe")
-					li
-						label(for="char_looks") Aussehen:
-						textarea(name="Person[Aussehen]", id="char_looks", rows="5", placeholder="Aussehen").halfSize
-					li
-						label(for="char_story") Hintergrund:
-						textarea(name="Person[Hintergrund]", id="char_story", rows="5", placeholder="Hintergrund").halfSize
+		form(action=url, method="post", accept-charset="utf-8")#newChar
+			input(type="hidden", name="_method", value="put")
 
 			fieldset
-				legend Generierung
-				ul.floatLabel
-					each val, key in ["Rasse", "Kultur", "Profession", "BgB"]
+				legend Bestehende Vor- & Nachteile
+				ul.pro_con.fl_links
+					li.mitte 
+						strong Vorteile
+					each val in Vorteile
 						li
-							label(for="rkp"+key, id="rkp"+key+"lab") #{val}:
-							input(name="Generierung["+val+"][name]", id="rkp"+key, type="text", placeholder=val).size15
-							input(name="Generierung["+val+"][modifikation]", id="rkp"+key+"mod", type="text", placeholder=val+"-Modifikaton(en)").size30
-				script.
-					(function() {
-						var $inputs = $('#rkp3, #rkp3mod');
-						$inputs.prop('disabled', true);
-						$('#rkp3lab')
-							.attr('title', 'Zum (De-)Aktivieren klicken')
-							.on("click", function() { 
-								$inputs.prop('disabled', !$inputs.prop('disabled') );
-							});
-					})();
-			fieldset
-				legend Attribute
-				table
-					colgroup
-						col(style="width: 40%")
-						col(span="3" style="width: 20%")
-					thead
-						tr
-							th Eigenschaft
-							th Modifikator
-							th Startwert
-							th aktueller Wert
-					tbody
-						each val, key in {Mut:"MU", Klugheit:"KL", Intuition:"IN", Charisma:"CH", Fingerfertigkeit:"FF", Gewandheit:"GE", Konstitution:"KO", Körperkraft:"KK"}
-							tr
-								td= key
-								td 
-									input(name="Attribute["+val+"][mod]", type="number", min="-10", max="10", step="1", value="0")
-								td 
-									input(name="Attribute["+val+"][start]", type="number", min="0", step="1", value="8")
-								td 
-									input(name="Attribute["+val+"][wert]", type="number", min="0", step="1", value="8")
-							
-			fieldset
-				legend Basiswerte
-				table
-					colgroup
-						col(style="width: 40%")
-						col(span="3" style="width: 20%")
-					thead
-						tr
-							th Eigenschaft
-							th Modifikator
-							th gekauft
-							th maximal
-					tbody
-						tr
-							td Lebensenergie
-							td 
-								input(name="modifikatoren[LeP][start]", type="number", min="0", step="1", value="10")
-							td
-								input(name="modifikatoren[LeP][add]",   type="number", min="0", step="1", value="0")
-							td
-								input(name="modifikatoren[LeP][max]",   type="number", min="0", step="1")
-						tr
-							td Ausdauer
-							td 
-								input(name="modifikatoren[AuP][start]", type="number", min="0", step="1", value="10")
-							td
-								input(name="modifikatoren[AuP][add]",   type="number", min="0", step="1", value="0")
-							td
-								input(name="modifikatoren[AuP][max]",   type="number", min="0", step="1")
-						tr
-							td#asp(title="Zum (De-)Aktivieren klicken") Astralenergie
-							td 
-								input(name="modifikatoren[AsP][start]", type="number", min="0", step="1")
-							td
-								input(name="modifikatoren[AsP][add]",   type="number", min="0", step="1")
-							td
-								input(name="modifikatoren[AsP][max]",   type="number", min="0", step="1")
-						tr
-							td#kap(title="Zum (De-)Aktivieren klicken") Karmaenergie
-							td 
-								input(name="modifikatoren[KaP][start]", type="number", min="0", step="12")
-							td
-								input(name="modifikatoren[KaP][add]",   type="number", min="0", step="4")
-							td
-						tr
-							td Magieresistenz
-							td 
-								input(name="modifikatoren[MR][start]", type="number", min="-10", max="10", step="1", value="-4")
-							td
-								input(name="modifikatoren[MR][add]",   type="number", min="0", step="1", value="0")
-							td
-								input(name="modifikatoren[MR][max]",   type="number", min="0", step="1")
-						tr
-							td Initiative
-							td.links
-								input(name="modifikatoren[INI]", id="INI_KR" type="checkbox", value="4")
-								label(for="INI_KR") Kampfreflexe
-							td.links
-								input(name="modifikatoren[INI]", id="INI_KG" type="checkbox", value="2")
-								label(for="INI_KG") Kampfgespür
-							td
-						tr
-							td Wundschwelle
-							td.links
-								input(name="modifikatoren[WS]", id="eisern", type="checkbox", value="2")
-								label(for="eisern") Eisern
-							td.links
-								input(name="modifikatoren[WS]", id="glasknochen", type="checkbox", value="-2")
-								label(for="glasknochen") Glasknochen
-							td
-								input(name="modifikatoren[WS]", id="WS_other", type="number", step="1", value="0", title="andere WS-Modifikatoren")
-						tr
-							td Geschwindigkeit
-							td.links
-								input(name="modifikatoren[GS]", id="GS_flink", type="checkbox", value="1")
-								label(for="GS_flink") Flink
-								br
-								input(name="modifikatoren[GS]", id="GS_lahm", type="checkbox", value="2")
-								label(for="GS_lahm") Lahm
-							td.links
-								input(name="modifikatoren[GS]", id="GS_klein", type="checkbox", value="-1")
-								label(for="GS_klein") Kleinwüchsig
-								br
-								input(name="modifikatoren[GS]", id="GS_zwerg", type="checkbox", value="-2")
-								label(for="GS_zwerg") Zwergenwuchs
-							td
-								input(name="modifikatoren[GS]", id="GS_other", type="number", step="1", value="0", title="andere GS-Modifikatoren")
-				script.
-					(function() {
-						$('#asp, #kap')
-							.on("click", function() {
-								var $inputs = $(this).closest('tr').find('input');
-								$inputs.prop('disabled', !$inputs.prop('disabled'));
-							})
-							.closest('tr')
-							.find('input')
-							.prop('disabled', true);
-						
-					})();
+							input(name="Vorteile", type="text", value=val)
+				ul.pro_con.fl_rechts
+					li.mitte 
+						strong Nachteile
+					each val in Nachteile
+						li
+							input(name="Nachteile", type="text", value=val)
 			
 			fieldset
-				legend Vor- & Nachteile
+				legend Neue Vor- & Nachteile
 				ul.vor_nach.fl_links
 					li.mitte
 						strong Vorteile
@@ -746,7 +573,7 @@ html(lang="de")
 					+plainProCon("Behäbig", 1)
 					+stagedProCon("Blutdurst", 1, { max:20 })
 					+plainProCon("Blutrausch", 1)
-					+stagedProCon("Brünstigkeit", 1, { max:20 })
+					+stagedProCon("Brünstigkeit", 1, { max,20: })
 					+stagedProCon("Dunkelangst", 1, { max:20 })
 					+plainProCon("Einarmig", 1)
 					+plainProCon("Einäugig", 1)
@@ -923,8 +750,9 @@ html(lang="de")
 					+plainProCon("Schneller Alternd", 1)
 					li
 						input(name="Nachteile", type="checkbox", value="Schulden", id="nachteil_92").stufe
-						label(for="nachteil_92") Schulden (Dukaten)
-						input(type="number", min="500", max="2000", step="1")
+						label(for="nachteil_92") Schulden
+						input(type="number", min="500", max="2000", step="100")
+						span.fl_rechts Dukaten
 					+stagedProCon("Schwache Ausstrahlung", 1, { max:5 })
 					+plainProCon("Schwacher Astralkörper", 1)
 					+plainProCon("Schwanzlos", 1)
