--- a/views/held.jade
+++ b/views/held.jade
@@ -88,7 +88,7 @@ mixin LanguageTable(__liste, __name)
 !!! 5
 html(lang="de")
 	head
-		title= held.Person.Name
+		title= Person.Name
 		link(rel="stylesheet", type="text/css", href="/show.css")
 		link(rel="stylesheet", type="text/css", href="/nav.css")
 	body
@@ -100,7 +100,7 @@ html(lang="de")
 				li
 					a.mitte(href="/neu") [ Neuer Charakter ]
 				li 
-					a.mitte #{held.Person.Name.split(' ')[0]} bearbeiten
+					a.mitte #{Person.Name.split(' ')[0]} bearbeiten
 					ul
 						li
 							a(href="/ap/"+_id) Abenteuerpunkte
@@ -137,7 +137,7 @@ html(lang="de")
 							a(href="#taw") Talentwerte
 
 		section(style="clear: both;")
-			h1.mitte= held.Person.Name
+			h1.mitte= Person.Name
 			
 			a#bes
 			table.data-section.links.eigenschaften
@@ -149,34 +149,34 @@ html(lang="de")
 					col(style="width: 35%")
 				tr
 					th Geschlecht
-					td= held.Person.Geschlecht
+					td= Person.Geschlecht
 					th Sozialstatus
-					td= held.Person.SO
+					td= Person.SO
 				tr
 					th Größe
-					td #{held.Person.Größe} HF
+					td #{Person.Größe} HF
 					th Titel
-					td= held.Person.Titel
+					td= Person.Titel
 				tr
 					th Gewicht
-					td #{held.Person.Gewicht} Stein
+					td #{Person.Gewicht} Stein
 					th Haarfarbe
-					td= held.Person.Haarfarbe
+					td= Person.Haarfarbe
 				tr
 					th Tsatag
 					- var monate = ["PRA", "RON", "EFF", "TRA", "BOR", "HES", "FIR", "TSA", "PHE", "PER", "ING", "RAH", "(NLT)"]
-					td= held.Person.Tsatag.tag+". "+monate[held.Person.Tsatag.monat]+" "+held.Person.Tsatag.jahr+" BF"
+					td= Person.Tsatag.tag+". "+monate[Person.Tsatag.monat]+" "+Person.Tsatag.jahr+" BF"
 					th Augenfarbe
-					td= held.Person.Augenfarbe
+					td= Person.Augenfarbe
 				tr
 					th Aussehen
 					td(colspan="3")
-						each line in held.Person.Aussehen.split('\n')
+						each line in Person.Aussehen.split('\n')
 							p= line
 				tr
 					th Hintergrund
 					td(colspan="3")
-						each line in held.Person.Hintergrund.split('\n')
+						each line in Person.Hintergrund.split('\n')
 							p= line
 			
 			a#gen
@@ -190,15 +190,15 @@ html(lang="de")
 				each val in ["Rasse", "Kultur", "Profession"]
 					tr
 						th #{val}:
-						td= held.Generierung[val].name
+						td= Generierung[val].name
 						th Modifikationen:
-						td= held.Generierung[val].modifikation
-				if held.Generierung.BgB.name
+						td= Generierung[val].modifikation
+				if Generierung.BgB.name
 					tr
 						th BgB:
-						td= held.Generierung.BgB.name
+						td= Generierung.BgB.name
 						th Modifikationen:
-						td= held.Generierung.BgB.modifikation
+						td= Generierung.BgB.modifikation
 			a#att
 			table.data-section.mitte.eigenschaften
 				caption Attribute
@@ -213,9 +213,9 @@ html(lang="de")
 				tbody
 					tr
 						each val in ["MU", "KL", "IN", "CH", "FF", "GE", "KO", "KK"]
-							td= held.Attribute[val].wert
+							td= Attribute[val].wert
 						td
-						td= held.Basiswerte.GS
+						td= Basiswerte.GS
 			a#bas
 			table.data-section.mitte.eigenschaften
 				caption Basiswerte
@@ -228,9 +228,9 @@ html(lang="de")
 				tbody
 					tr
 						each val in ["LeP", "AuP", "AsP", "KaP", "MR"]
-							td= held.Basiswerte[val] || '—'
+							td= Basiswerte[val] || '—'
 						each val in ["INI", "AT", "PA", "FK", "WS"]
-							td= held.Kampfwerte[val]
+							td= Kampfwerte[val]
 			a#vnt
 			table.data-section
 				caption Vor- und Nachteile
@@ -239,12 +239,12 @@ html(lang="de")
 						ul.vor-nach.fl-links
 							li.mitte
 								strong Vorteile
-							each val in held.Vorteile
+							each val in Vorteile
 								li= val
 						ul.vor-nach.fl-rechts
 							li.mitte
 								strong Nachteile
-							each val in held.Nachteile
+							each val in Nachteile
 								li= val
 		a#ap
 		section
